# ErisPulse-CopyCat

./: README.md  pyproject.toml
CopyCat/: Core.py  config.py
