[project]
name = "ErisPulse-CopyCat"
version = "1.0.0"
description = "复读机模块 - 检测群聊/私聊中连续重复消息并自动复读（同一条消息仅复读一次）"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "eris" }
]
dependencies = []

[project.urls]
"homepage" = "https://github.com/wsu2059q/ErisPulse-CopyCat"

[project.entry-points."erispulse.module"]
"CopyCat" = "CopyCat:Main"
